# flocx-ui

./: .gitignore  .pylintrc  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  docker-compose.yml  lower-constraints.txt  manage.py  package.json  requirements.txt  setup.cfg  setup.py  test-requirements.txt  test-shim.js  tox.ini
docker/: install_flocx_ui.sh
docker/baremetal_mock/: .eslintrc  Dockerfile  data.js  index.js  keystone.js  package.json
docker/baremetal_mock/routes/: nodes.js
flocx-ui/: pip-selfcheck.json
flocx_ui/: __init__.py  karma.conf.js
flocx_ui/api/: flocx.py  flocx_market.py  flocx_provider.py  flocx_rest_api.py  schema.py  utils.py
flocx_ui/content/flocx/: panel.py  urls.py  views.py
flocx_ui/content/flocx/templates/flocx/: index.html
flocx_ui/enabled/: _31000_flocx-ui.py
flocx_ui/static/dashboard/project/flocx/: flocx.backend-mock.service.js  flocx.module.js  flocx.service.js  flocx.service.spec.js  flocxApi.service.js  flocxApi.service.spec.js
flocx_ui/static/dashboard/project/flocx/bid-list/: bid-list.controller.js  bid-list.html
flocx_ui/static/dashboard/project/flocx/contract-list/: contract-list.controller.js  contract-list.html
flocx_ui/static/dashboard/project/flocx/create-bid/: create-bid.controller.js  create-bid.controller.spec.js  (+2 more)
flocx_ui/test/: settings.py  urls.py
flocx_ui/test/integration/: horizon.conf  test_basic.py
flocx_ui/test/tests/: helpers.py  test_data.json  test_flocx_rest_api.py  test_flocx_service.py  test_registration.py  test_schema.py
(+14 files in other folders)
