[metadata]
name = flocx-ui
summary = Flocx plugin for horizon to show and create bids, offers, and contracts
description-file =
    README.md
author = Jacob Daitzman
author_email = jdtzmn@gmail.com
home-page = https://github.com/jdtzmn/flocx-ui
classifier =
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    flocx-ui